Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4942

lock callback timeout is not per-export

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • None
    • 3
    • 13659

      The gathered lock callback timeout statistics is common for the whole cluster, what means it does not handle slow clients properly what leads to client evictions.

      (moving my work from LU-4579 to a separate ticker)

            green Oleg Drokin
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: