lustre/ldlm/ldlm_lockd.c
@@ -325,7 +325,7 @@ static void waiting_locks_callback(unsigned long unused)
 			spin_unlock_bh(&waiting_locks_spinlock);
 			LDLM_DEBUG(lock, "prolong the busy lock");
 			ldlm_refresh_waiting_lock(lock,
-						  ldlm_get_enq_timeout(lock));
+						  ldlm_bl_timeout(lock) >> 1);
 			spin_lock_bh(&waiting_locks_spinlock);
 
                         if (!cont) {
@@ -418,7 +418,7 @@ static int __ldlm_add_waiting_lock(struct ldlm_lock *lock, int seconds)
 static int ldlm_add_waiting_lock(struct ldlm_lock *lock)
 {
 	int ret;
-	int timeout = ldlm_get_enq_timeout(lock);
+	int timeout = ldlm_bl_timeout(lock);
 
 	/* NB: must be called with hold of lock_res_and_lock() */
 	LASSERT(ldlm_is_res_locked(lock));
@@ -438,6 +438,7 @@ static int ldlm_add_waiting_lock(struct ldlm_lock *lock)
                 return 0;
         }
 
+	lock->l_last_activity = cfs_time_current_sec();
         ret = __ldlm_add_waiting_lock(lock, timeout);
         if (ret) {
                 /* grab ref on the lock if it has been added to the
@@ -580,6 +581,19 @@ static int ldlm_add_waiting_lock(struct ldlm_lock *lock)
 #endif /* HAVE_SERVER_SUPPORT && __KERNEL__ */
 
 #ifdef HAVE_SERVER_SUPPORT
+int ldlm_bl_timeout(struct ldlm_lock *lock)
+{
+	int timeout = at_get(&lock->l_export->exp_bl_lock_at);
+	if (AT_OFF)
+		return obd_timeout / 2;
+
+	/* Since these are non-updating timeouts, we should be conservative.
+	   It would be nice to have some kind of "early reply" mechanism for
+	   lock callbacks too... */
+	timeout = min_t(int, at_max, timeout + (timeout >> 1)); /* 150% */
+	return max(timeout, ldlm_enqueue_min);
+}
+EXPORT_SYMBOL(ldlm_bl_timeout);
 
 /**
  * Perform lock cleanup if AST sending failed.
@@ -727,7 +741,7 @@ static void ldlm_update_resend(struct ptlrpc_request *req, void *data)
 	struct ldlm_cb_async_args *ca   = data;
 	struct ldlm_lock          *lock = ca->ca_lock;
 
-	ldlm_refresh_waiting_lock(lock, ldlm_get_enq_timeout(lock));
+	ldlm_refresh_waiting_lock(lock, ldlm_bl_timeout(lock));
 }
 
 static inline int ldlm_ast_fini(struct ptlrpc_request *req,
@@ -866,7 +880,7 @@ int ldlm_server_blocking_ast(struct ldlm_lock *lock,
 		unlock_res_and_lock(lock);
 
 		/* Do not resend after lock callback timeout */
-		req->rq_delay_limit = ldlm_get_enq_timeout(lock);
+		req->rq_delay_limit = ldlm_bl_timeout(lock);
 		req->rq_resend_cb = ldlm_update_resend;
 	}
 
@@ -899,7 +913,6 @@ int ldlm_server_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data)
         struct ldlm_request    *body;
         struct ptlrpc_request  *req;
         struct ldlm_cb_async_args *ca;
-        long                    total_enqueue_wait;
         int                     instant_cancel = 0;
         int                     rc = 0;
 	int			lvb_len;
@@ -907,9 +920,6 @@ int ldlm_server_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data)
 
         LASSERT(lock != NULL);
         LASSERT(data != NULL);
-
-        total_enqueue_wait = cfs_time_sub(cfs_time_current_sec(),
-                                          lock->l_last_activity);
 
         req = ptlrpc_request_alloc(lock->l_export->exp_imp_reverse,
                                     &RQF_LDLM_CP_CALLBACK);
@@ -963,23 +973,7 @@ int ldlm_server_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data)
 		}
         }
 
-        LDLM_DEBUG(lock, "server preparing completion AST (after %lds wait)",
-                   total_enqueue_wait);
-
-        /* Server-side enqueue wait time estimate, used in
-            __ldlm_add_waiting_lock to set future enqueue timers */
-        if (total_enqueue_wait < ldlm_get_enq_timeout(lock))
-                at_measured(ldlm_lock_to_ns_at(lock),
-                            total_enqueue_wait);
-        else
-                /* bz18618. Don't add lock enqueue time we spend waiting for a
-                   previous callback to fail. Locks waiting legitimately will
-                   get extended by ldlm_refresh_waiting_lock regardless of the
-                   estimate, so it's okay to underestimate here. */
-                LDLM_DEBUG(lock, "lock completed after %lus; estimate was %ds. "
-                       "It is likely that a previous callback timed out.",
-                       total_enqueue_wait,
-                       at_get(ldlm_lock_to_ns_at(lock)));
+	LDLM_DEBUG(lock, "server preparing completion AST");
 
         ptlrpc_request_set_replen(req);
 
@@ -1014,7 +1008,7 @@ int ldlm_server_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data)
 			/* start the lock-timeout clock */
 			ldlm_add_waiting_lock(lock);
 			/* Do not resend after lock callback timeout */
-			req->rq_delay_limit = ldlm_get_enq_timeout(lock);
+			req->rq_delay_limit = ldlm_bl_timeout(lock);
 			req->rq_resend_cb = ldlm_update_resend;
 		}
         }
@@ -1184,7 +1178,7 @@ int ldlm_handle_enqueue0(struct ldlm_namespace *ns,
 
         LDLM_DEBUG_NOLOCK("server-side enqueue handler START");
 
-        ldlm_request_cancel(req, dlm_req, LDLM_ENQUEUE_CANCEL_OFF);
+	ldlm_request_cancel(req, dlm_req, LDLM_ENQUEUE_CANCEL_OFF, 0);
 	flags = ldlm_flags_from_wire(dlm_req->lock_flags);
 
         LASSERT(req->rq_export);
@@ -1266,7 +1260,6 @@ int ldlm_handle_enqueue0(struct ldlm_namespace *ns,
         if (!lock)
                 GOTO(out, rc = -ENOMEM);
 
-        lock->l_last_activity = cfs_time_current_sec();
         lock->l_remote_handle = dlm_req->lock_handle[0];
         LDLM_DEBUG(lock, "server-side enqueue handler, new lock created");
 
@@ -1510,7 +1503,6 @@ int ldlm_handle_convert0(struct ptlrpc_request *req,
 
                 LDLM_DEBUG(lock, "server-side convert handler START");
 
-                lock->l_last_activity = cfs_time_current_sec();
                 res = ldlm_lock_convert(lock, dlm_req->lock_desc.l_req_mode,
                                         &dlm_rep->lock_flags);
                 if (res) {
@@ -1561,7 +1553,8 @@ EXPORT_SYMBOL(ldlm_handle_convert);
  * requests.
  */
 int ldlm_request_cancel(struct ptlrpc_request *req,
-                        const struct ldlm_request *dlm_req, int first)
+			const struct ldlm_request *dlm_req,
+			int first, int at_stats)
 {
         struct ldlm_resource *res, *pres = NULL;
         struct ldlm_lock *lock;
@@ -1611,6 +1604,14 @@ int ldlm_request_cancel(struct ptlrpc_request *req,
                         }
                         pres = res;
                 }
+
+		if (at_stats && ldlm_is_ast_sent(lock)) {
+			long delay = cfs_time_sub(cfs_time_current_sec(),
+						  lock->l_last_activity);
+			LDLM_DEBUG(lock, "server cancels blocked lock after "
+				   CFS_DURATION_T"s", delay);
+			at_measured(&lock->l_export->exp_bl_lock_at, delay);
+		}
                 ldlm_lock_cancel(lock);
                 LDLM_LOCK_PUT(lock);
         }
@@ -1650,7 +1651,7 @@ int ldlm_handle_cancel(struct ptlrpc_request *req)
         if (rc)
                 RETURN(rc);
 
-        if (!ldlm_request_cancel(req, dlm_req, 0))
+	if (!ldlm_request_cancel(req, dlm_req, 0, 1))
 		req->rq_status = LUSTRE_ESTALE;
 
         RETURN(ptlrpc_reply(req));
